finished an evaluation

--- a/test.ipynb
+++ b/test.ipynb
@@ -48,28 +48,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.isne_recommendation.TfidfLinearKernel import get_recommendations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Assuming your dataset is stored in a pandas DataFrame called 'ui_data'\n",
     "# and 'username' is the column containing names of users, 'course' is the column containing course name\n",
     "\n",
+    "# The names of users who have taken more than one course\n",
+    "usernames = ui_data['username'].value_counts()\n",
+    "usernames = usernames[usernames > 1].index\n",
+    "\n",
+    "# Drop courses that have been taken more than 1 time by the same user\n",
+    "ui_data_drop = ui_data.drop_duplicates(subset=['username', 'course'])\n",
+    "\n",
     "# Calculate the number of courses each user has taken\n",
-    "courses_per_user = ui_data.groupby('username')['course'].count().reset_index()\n",
+    "courses_per_user = ui_data_drop.groupby('username')['course'].count().reset_index()\n",
     "courses_per_user.columns = ['username', 'course_count']\n",
     "\n",
     "# Merge the courses_per_user DataFrame back to the original DataFrame\n",
-    "merged_user_courses = ui_data.merge(courses_per_user, on='username')\n",
+    "merged_user_courses = ui_data_drop.merge(courses_per_user, on='username')\n",
     "\n",
     "# Sort the DataFrame by username and course to ensure consistent train-test split\n",
     "user_courses = merged_user_courses.sort_values(by=['username', 'course'])\n",
@@ -100,6 +98,9 @@
     "train_ui_data = train_ui_data.drop(['course_count', 'split'], axis=1)\n",
     "test_ui_data = test_ui_data.drop(['course_count', 'split'], axis=1)\n",
     "\n",
+    "train_ui_data = train_ui_data.set_axis(range(len(train_ui_data)))\n",
+    "test_ui_data = test_ui_data.set_axis(range(len(test_ui_data)))\n",
+    "\n",
     "# Now train_ui_data contains rows where users learned n - 1 courses for training,\n",
     "# and test_ui_data contains rows where users learned course n for testing"
    ]
@@ -108,12 +109,181 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Recall @K"
+    "### TF-IDF and Linear Kernel Performance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.isne_recommendation.TfidfLinearKernel import get_recommendations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "string indices must be integers, not 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[39], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m hit \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m usernames:\n\u001b[1;32m----> 3\u001b[0m     predictions \u001b[38;5;241m=\u001b[39m \u001b[43mget_recommendations\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mi_data\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_ui_data\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mCourse\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mtolist()\n\u001b[0;32m      4\u001b[0m     results \u001b[38;5;241m=\u001b[39m test_ui_data[test_ui_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124musername\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m name][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcourse\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m      5\u001b[0m     isHit \u001b[38;5;241m=\u001b[39m results \u001b[38;5;129;01min\u001b[39;00m predictions\n",
+      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers, not 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "hit = []\n",
+    "for name in usernames:\n",
+    "    if type(predictions) is str:\n",
+    "        isHit = False\n",
+    "        hit.append(isHit)\n",
+    "    else:\n",
+    "        predictions = get_recommendations(name, i_data, train_ui_data, 10)['Course'].tolist()\n",
+    "        results = test_ui_data[test_ui_data['username'] == name]['course'].iloc[0]\n",
+    "        isHit = results in predictions\n",
+    "        hit.append(isHit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hits = np.count_nonzero(hit)\n",
+    "# accuracy = hits / len(usernames)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feature Ratings and KNN Performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.isne_recommendation.FeatureRatingsKNN import get_recommendations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Course</th>\n",
+       "      <th>Cosine Distance</th>\n",
+       "      <th>Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Addiction Treatment: Clinical Skills for Healt...</td>\n",
+       "      <td>0.670731</td>\n",
+       "      <td>0.329269</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              Course  Cosine Distance  \\\n",
+       "0  Addiction Treatment: Clinical Skills for Healt...         0.670731   \n",
+       "\n",
+       "      Score  \n",
+       "0  0.329269  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_recommendations('Martha Long', ui_data, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hit = []\n",
+    "# for name in usernames:\n",
+    "#     predictions = get_recommendations(name, train_ui_data, 10)\n",
+    "#     if type(predictions) is str:\n",
+    "#         isHit = False\n",
+    "#         hit.append(isHit)\n",
+    "#     else:\n",
+    "#         predictions = predictions['Course'].tolist()\n",
+    "#         results = test_ui_data[test_ui_data['username'] == name]['course'].iloc[0]\n",
+    "#         isHit = results in predictions\n",
+    "#         hit.append(isHit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hits = np.count_nonzero(hit)\n",
+    "# accuracy = hits / len(usernames)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hybrid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.isne_recommendation.Hybrid import get_recommendations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -140,84 +310,103 @@
        "      <th>Course</th>\n",
        "      <th>Score</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Index</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Build Basic Generative Adversarial Networks (G...</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>54</th>\n",
        "      <td>Non-Equilibrium Applications of Statistical Th...</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>0.655798</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>56</th>\n",
-       "      <td>Physics of silicon solar cells</td>\n",
-       "      <td>0.210851</td>\n",
+       "      <th>5</th>\n",
+       "      <td>Build Basic Generative Adversarial Networks (G...</td>\n",
+       "      <td>0.246585</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>52</th>\n",
-       "      <td>Medical Applications of Particle Accelerators ...</td>\n",
-       "      <td>0.185854</td>\n",
+       "      <th>1</th>\n",
+       "      <td>Addiction Treatment: Clinical Skills for Healt...</td>\n",
+       "      <td>0.170167</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>Foundations of Public Health Practice: Behavio...</td>\n",
-       "      <td>0.175814</td>\n",
+       "      <th>15</th>\n",
+       "      <td>Culminating Project in Health Informatics</td>\n",
+       "      <td>0.072155</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>62</th>\n",
-       "      <td>Python and Machine Learning for Asset Management</td>\n",
-       "      <td>0.170540</td>\n",
+       "      <th>8</th>\n",
+       "      <td>COVID-19 - A clinical update</td>\n",
+       "      <td>0.067086</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Biomedical Visualisation</td>\n",
-       "      <td>0.169872</td>\n",
+       "      <th>0</th>\n",
+       "      <td>A Crash Course in Data Science</td>\n",
+       "      <td>0.048736</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>Introduction to International Criminal Law</td>\n",
-       "      <td>0.163321</td>\n",
+       "      <th>63</th>\n",
+       "      <td>Qualitative Research Methods</td>\n",
+       "      <td>0.042523</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>57</th>\n",
-       "      <td>Political Governance and Public Policy in Russia</td>\n",
-       "      <td>0.154583</td>\n",
+       "      <th>79</th>\n",
+       "      <td>Write A Feature Length Screenplay For Film Or ...</td>\n",
+       "      <td>0.036554</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Disease Screening in Public Health</td>\n",
-       "      <td>0.152959</td>\n",
+       "      <th>2</th>\n",
+       "      <td>Agile Meets Design Thinking</td>\n",
+       "      <td>0.027061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>Social Media Management</td>\n",
+       "      <td>0.024238</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                               Course     Score\n",
-       "5   Build Basic Generative Adversarial Networks (G...  1.000000\n",
-       "54  Non-Equilibrium Applications of Statistical Th...  1.000000\n",
-       "56                     Physics of silicon solar cells  0.210851\n",
-       "52  Medical Applications of Particle Accelerators ...  0.185854\n",
-       "31  Foundations of Public Health Practice: Behavio...  0.175814\n",
-       "62   Python and Machine Learning for Asset Management  0.170540\n",
-       "3                            Biomedical Visualisation  0.169872\n",
-       "43         Introduction to International Criminal Law  0.163321\n",
-       "57   Political Governance and Public Policy in Russia  0.154583\n",
-       "21                 Disease Screening in Public Health  0.152959"
+       "                                                  Course     Score\n",
+       "Index                                                             \n",
+       "54     Non-Equilibrium Applications of Statistical Th...  0.655798\n",
+       "5      Build Basic Generative Adversarial Networks (G...  0.246585\n",
+       "1      Addiction Treatment: Clinical Skills for Healt...  0.170167\n",
+       "15             Culminating Project in Health Informatics  0.072155\n",
+       "8                           COVID-19 - A clinical update  0.067086\n",
+       "0                         A Crash Course in Data Science  0.048736\n",
+       "63                          Qualitative Research Methods  0.042523\n",
+       "79     Write A Feature Length Screenplay For Film Or ...  0.036554\n",
+       "2                            Agile Meets Design Thinking  0.027061\n",
+       "68                               Social Media Management  0.024238"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "recommendations = get_recommendations('Martha Long', i_data, train_ui_data, 10)\n",
-    "recommendations"
+    "get_recommendations('Billy Carter', i_data, ui_data, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hit = []\n",
+    "# for name in usernames:\n",
+    "#     predictions = get_recommendations(name, i_data, train_ui_data, 10)['Course'].tolist()\n",
+    "#     results = test_ui_data[test_ui_data['username'] == name]['course'].iloc[0]\n",
+    "#     isHit = results in predictions\n",
+    "#     hit.append(isHit)"
    ]
   }
  ],
