--- a/test.ipynb
+++ b/test.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,29 +123,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "string indices must be integers, not 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[39], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m hit \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m usernames:\n\u001b[1;32m----> 3\u001b[0m     predictions \u001b[38;5;241m=\u001b[39m \u001b[43mget_recommendations\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mi_data\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_ui_data\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mCourse\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mtolist()\n\u001b[0;32m      4\u001b[0m     results \u001b[38;5;241m=\u001b[39m test_ui_data[test_ui_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124musername\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m name][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcourse\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m      5\u001b[0m     isHit \u001b[38;5;241m=\u001b[39m results \u001b[38;5;129;01min\u001b[39;00m predictions\n",
-      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers, not 'str'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "hit = []\n",
     "for name in usernames:\n",
+    "    predictions = get_recommendations(name, i_data, train_ui_data, 10)\n",
     "    if type(predictions) is str:\n",
     "        isHit = False\n",
     "        hit.append(isHit)\n",
     "    else:\n",
-    "        predictions = get_recommendations(name, i_data, train_ui_data, 10)['Course'].tolist()\n",
+    "        predictions = predictions['Course'].tolist()\n",
     "        results = test_ui_data[test_ui_data['username'] == name]['course'].iloc[0]\n",
     "        isHit = results in predictions\n",
     "        hit.append(isHit)"
@@ -153,12 +142,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.07083333333333333"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# hits = np.count_nonzero(hit)\n",
-    "# accuracy = hits / len(usernames)"
+    "hits = np.count_nonzero(hit)\n",
+    "accuracy = hits / len(usernames)\n",
+    "accuracy"
    ]
   },
   {
@@ -170,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,31 +239,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hit = []\n",
-    "# for name in usernames:\n",
-    "#     predictions = get_recommendations(name, train_ui_data, 10)\n",
-    "#     if type(predictions) is str:\n",
-    "#         isHit = False\n",
-    "#         hit.append(isHit)\n",
-    "#     else:\n",
-    "#         predictions = predictions['Course'].tolist()\n",
-    "#         results = test_ui_data[test_ui_data['username'] == name]['course'].iloc[0]\n",
-    "#         isHit = results in predictions\n",
-    "#         hit.append(isHit)"
+    "hit = []\n",
+    "for name in usernames:\n",
+    "    predictions = get_recommendations(name, train_ui_data, 10)\n",
+    "    if type(predictions) is str:\n",
+    "        isHit = False\n",
+    "        hit.append(isHit)\n",
+    "    else:\n",
+    "        predictions = predictions['Course'].tolist()\n",
+    "        results = test_ui_data[test_ui_data['username'] == name]['course'].iloc[0]\n",
+    "        isHit = results in predictions\n",
+    "        hit.append(isHit)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.21770833333333334"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# hits = np.count_nonzero(hit)\n",
-    "# accuracy = hits / len(usernames)"
+    "hits = np.count_nonzero(hit)\n",
+    "accuracy = hits / len(usernames)\n",
+    "accuracy"
    ]
   },
   {
@@ -274,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,16 +410,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hit = []\n",
-    "# for name in usernames:\n",
-    "#     predictions = get_recommendations(name, i_data, train_ui_data, 10)['Course'].tolist()\n",
-    "#     results = test_ui_data[test_ui_data['username'] == name]['course'].iloc[0]\n",
-    "#     isHit = results in predictions\n",
-    "#     hit.append(isHit)"
+    "hit = []\n",
+    "for name in usernames:\n",
+    "    predictions = get_recommendations(name, i_data, train_ui_data, 10)['Course'].tolist()\n",
+    "    results = test_ui_data[test_ui_data['username'] == name]['course'].iloc[0]\n",
+    "    isHit = results in predictions\n",
+    "    hit.append(isHit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.275"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hits = np.count_nonzero(hit)\n",
+    "accuracy = hits / len(usernames)\n",
+    "accuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Results "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **The first approach**: _TF-IDF_ and _Linear Kernel_ Performance has an accuracy score of 7.08 percentage\n",
+    "- **The second approach**: _Feature Ratings_ and _KNN Performance_ has an accuracy score of 21.77 percentage\n",
+    "- **The third approach**: _Hybrid_ has an accuracy score of 27.5 percentage"
    ]
   }
  ],
