--- a/test.ipynb
+++ b/test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.isne_recommendation import TfidfLinearKernel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = TfidfLinearKernel.fit(i_data)\n",
+    "prediction = TfidfLinearKernel.predict('Martha Long', i_data, ui_data, model, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train, test = TfidfLinearKernel.train_test_split(ui_data)\n",
+    "evaluation = TfidfLinearKernel.evaluate_model(train, test, i_data, model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,99 +80,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = FeatureRatingsKNN.fit(ui_data)\n",
-    "prediction = FeatureRatingsKNN.predict('Martha Long', ui_data, model, 10)\n",
-    "evaluation = FeatureRatingsKNN.evaluate_model(ui_data, model, 10)"
+    "prediction = FeatureRatingsKNN.predict('Martha Long', ui_data, model, 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>username</th>\n",
-       "      <th>education</th>\n",
-       "      <th>age</th>\n",
-       "      <th>email</th>\n",
-       "      <th>address</th>\n",
-       "      <th>course</th>\n",
-       "      <th>time</th>\n",
-       "      <th>payment</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>471</th>\n",
-       "      <td>Martha Long</td>\n",
-       "      <td>Middle school level</td>\n",
-       "      <td>16</td>\n",
-       "      <td>gamil.com</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Build Basic Generative Adversarial Networks (G...</td>\n",
-       "      <td>2566-01-01 08:30:00</td>\n",
-       "      <td>success</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>472</th>\n",
-       "      <td>Martha Long</td>\n",
-       "      <td>Middle school level</td>\n",
-       "      <td>16</td>\n",
-       "      <td>gamil.com</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Non-Equilibrium Applications of Statistical Th...</td>\n",
-       "      <td>2566-03-11 14:01:00</td>\n",
-       "      <td>success</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        username            education  age      email address  \\\n",
-       "471  Martha Long  Middle school level   16  gamil.com     NaN   \n",
-       "472  Martha Long  Middle school level   16  gamil.com     NaN   \n",
-       "\n",
-       "                                                course                 time  \\\n",
-       "471  Build Basic Generative Adversarial Networks (G...  2566-01-01 08:30:00   \n",
-       "472  Non-Equilibrium Applications of Statistical Th...  2566-03-11 14:01:00   \n",
-       "\n",
-       "     payment  \n",
-       "471  success  \n",
-       "472  success  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "evaluation[evaluation['username'] == 'Martha Long']"
+    "train, test = FeatureRatingsKNN.train_test_split(ui_data)\n",
+    "model = FeatureRatingsKNN.fit(train)\n",
+    "evaluation = FeatureRatingsKNN.evaluate_model(train, test, model, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.isne_recommendation import Hybrid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Hybrid.fit(i_data, ui_data)\n",
+    "prediction = Hybrid.predict('Martha Long', i_data, ui_data, model, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train, test = Hybrid.train_test_split(ui_data)\n",
+    "model = Hybrid.fit(i_data, train)\n",
+    "prediction = Hybrid.evaluate_model(train, test, i_data, model)"
    ]
   },
   {
