--- a/test.ipynb
+++ b/test.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,17 +61,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.136986301369863"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train, test = TfidfLinearKernel.train_test_split(ui_data)\n",
-    "evaluation = TfidfLinearKernel.evaluate_model(train, test, i_data, model)"
+    "evaluation = TfidfLinearKernel.evaluate_model(train, test, i_data, model)\n",
+    "evaluation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,18 +102,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "train, test = FeatureRatingsKNN.train_test_split(ui_data)\n",
-    "model = FeatureRatingsKNN.fit(train)\n",
-    "evaluation = FeatureRatingsKNN.evaluate_model(train, test, model, 10)"
+    "train = train.set_axis(range(len(train)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4349315068493151"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train, test = FeatureRatingsKNN.train_test_split(ui_data)\n",
+    "model = FeatureRatingsKNN.fit(train)\n",
+    "evaluation = FeatureRatingsKNN.evaluate_model(train, test, model, 10)\n",
+    "evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,13 +154,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7568493150684932"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train, test = Hybrid.train_test_split(ui_data)\n",
     "model = Hybrid.fit(i_data, train)\n",
-    "prediction = Hybrid.evaluate_model(train, test, i_data, model)"
+    "evaluation = Hybrid.evaluate_model(train, test, i_data, model)\n",
+    "evaluation"
    ]
   },
   {
@@ -140,9 +186,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **The first approach**: _TF-IDF_ and _Linear Kernel_ Performance has an accuracy score of 7.08 percentage\n",
-    "- **The second approach**: _Feature Ratings_ and _KNN Performance_ has an accuracy score of 21.77 percentage\n",
-    "- **The third approach**: _Hybrid_ has an accuracy score of 27.5 percentage"
+    "- **The first approach**: _TF-IDF_ and _Linear Kernel_ Performance has an accuracy score of 13.70 percentage\n",
+    "- **The second approach**: _Feature Ratings_ and _KNN Performance_ has an accuracy score of 43.50 percentage\n",
+    "- **The third approach**: _Hybrid_ has an accuracy score of 75.68 percentage"
    ]
   }
  ],
