--- a/test.ipynb
+++ b/test.ipynb
@@ -97,7 +97,7 @@
    "source": [
     "train, test = FeatureRatingsKNN.train_test_split(ui_data)\n",
     "model = FeatureRatingsKNN.fit(train)\n",
-    "evaluation = FeatureRatingsKNN.evaluate_model(train, test, model, 10)\n",
+    "evaluation = FeatureRatingsKNN.evaluate_model(train, test, model)\n",
     "evaluation"
    ]
   },
